--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <!-- LESSON -->
 <section class="card" id="lessonCard">
   <div class="row-between">
-    <div id="badge" class="badge">Greeting</div>
+    <div id="badge" class="badge">Love</div>
     <button id="scrapBtn" class="icon-btn" title="Save this phrase" aria-label="Save">☆</button>
   </div>
 
-  <div id="context" class="context">"Hello"</div>
+  <div id="context" class="context">"I like you."</div>
 
   <div class="kbox">
-    <p id="korean" class="ko">안녕하세요.</p>
-    <p id="english" class="en">annyeonghaseyo</p>
-    <p id="pronunciation" style="display:none">annyeonghaseyo</p>
+    <p id="korean" class="ko">당신이 좋아요.</p>
+    <p id="english" class="en">dangshini joayo</p>
+    <p id="pronunciation" style="display:none">dangshini joayo</p>
   </div>
 
   <div class="practice">
@@ -213,7 +213,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <script defer src="data/travel.js?v=20251017"></script>
 <script defer src="data/drama.js?v=20251017"></script>
 <script defer src="data/trendy.js?v=20251019"></script>
-<script defer src="data/dataindex.js?v=20251017"></script>
+<script defer src="data/dataindex.js?v=20251019"></script>
 
 <!-- APP -->
 <script defer src="js/state.js?v=20251017"></script>
@@ -426,4 +426,3 @@ window.addEventListener('load',()=>{
 </script>
 </body>
 </html>
-
