--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <text x="16" y="40" font-family="sans-serif" font-size="22" font-weight="bold" fill="white">소</text>
   </svg>'/>
 
-<!-- GA -->
 <script>window.GA_ID='G-X1Q98DBKR5';</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1Q98DBKR5"></script>
 <script>
@@ -23,7 +22,6 @@
   gtag('config',window.GA_ID,{send_page_view:false});
 </script>
 
-<!-- Firebase compat -->
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -40,7 +38,6 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 
 .card{background:#fff;border-radius:18px;padding:18px;margin:10px 0;box-shadow:0 2px 12px rgba(0,0,0,.06)}
 
-/* Category picker */
 .category-bar{display:flex;align-items:center;gap:12px}
 .picker-wrap{position:relative}
 .picker-trigger{padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center}
@@ -52,7 +49,6 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .saved-btn{height:44px;padding:0 18px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap}
 .saved-btn:hover{background:#f7f2ff}
 
-/* Sub chips */
 .sub-filters{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
 .sub-chip{display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:14px;background:#fff;border:2px solid #e5e7eb;color:#374151;font-size:12px;font-weight:600;cursor:pointer;user-select:none}
 .sub-chip.active{background:#7c3aed;border-color:#7c3aed;color:#fff}
@@ -62,7 +58,6 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .icon-btn{border:none;background:transparent;width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
 .icon-btn.active{color:#e11d48}
 
-/* 핵심 깜빡임 제거 */
 #lessonCard .context,
 #lessonCard .en{opacity:0; transition:opacity .12s ease;}
 #lessonCard.lesson-ready .context,
@@ -82,7 +77,6 @@ h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 
 button.big{width:100%;padding:14px 20px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
 
-/* Speed slider */
 .row{display:flex;align-items:center;justify-content:center;gap:12px;background:#f9fafb;border-radius:10px;padding:10px;margin-top:8px}
 .speed-val{min-width:56px;text-align:left;font-variant-numeric:tabular-nums}
 input[type="range"]{accent-color:#7c3aed;outline:0}
@@ -96,7 +90,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 
 .hidden-tabs{display:none}
 
-/* Auth modal */
 .auth{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:9999;background:rgba(0,0,0,.45);padding:16px}
 .auth.open{display:flex}
 .auth-card{background:#fff;width:100%;max-width:380px;border-radius:20px;padding:24px;box-shadow:0 18px 50px rgba(0,0,0,.35);text-align:center;position:relative}
@@ -105,7 +98,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 .gbtn:hover{border-color:#d8dbe2;box-shadow:0 2px 8px rgba(124,58,237,.15)}
 .glogo{width:18px;height:18px;display:inline-block}
 
-/* Nav */
 .navbar{display:flex;align-items:center;justify-content:space-between;gap:14px;flex-wrap:nowrap}
 .nav-center{min-width:130px;text-align:center;font-size:13px;color:#6b7280;font-weight:700}
 .nav-btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:12px 28px;border-radius:14px;border:1.5px solid #e5e7eb;background:#fff;color:#111827;cursor:pointer;font-weight:800;font-size:14px;box-shadow:0 1px 6px rgba(0,0,0,.05)}
@@ -113,7 +105,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 .nav-btn .caret{font-size:15px;color:#7c3aed}
 .nav-btn:disabled{opacity:.5;cursor:not-allowed}
 
-/* Mobile */
 @media (max-width:480px){
   .navbar{flex-wrap:wrap}
   .nav-btn{flex:1 1 calc(50% - 8px);min-width:140px}
@@ -149,7 +140,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   <button id="loginBtn" class="top-btn primary">Login</button>
 </header>
 
-<!-- CATEGORY -->
 <section class="card">
   <div class="category-bar">
     <div class="picker-wrap">
@@ -159,7 +149,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
     <button id="savedBtn" class="saved-btn">★ Saved</button>
   </div>
 
-  <!-- 호환용 숨김 탭 -->
   <div class="hidden-tabs" aria-hidden="true">
     <button id="dailyBtn"   class="tab-button active">Daily</button>
     <button id="travelBtn"  class="tab-button">Travel</button>
@@ -171,7 +160,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   <div id="subFilters" class="sub-filters"></div>
 </section>
 
-<!-- LESSON -->
 <section class="card" id="lessonCard">
   <div class="row-between">
     <div id="badge" class="badge">Love</div>
@@ -203,7 +191,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   <div class="tip-card"><div id="tipText" class="tip-text">Tip: Listen carefully and repeat multiple times. Consistency is key.</div></div>
 </section>
 
-<!-- NAV -->
 <section class="card">
   <div class="navbar">
     <button id="prevBtn" class="nav-btn"><span class="caret">◀</span> Previous</button>
@@ -212,7 +199,6 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   </div>
 </section>
 
-<!-- AUTH MODAL -->
 <div id="authModal" class="auth">
   <div class="auth-card">
     <button id="authClose" class="auth-close" aria-label="Close">×</button>
@@ -227,19 +213,16 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   </div>
 </div>
 
-<!-- DATA -->
 <script defer src="data/daily.js?v=20251017"></script>
 <script defer src="data/travel.js?v=20251017"></script>
 <script defer src="data/drama.js?v=20251017"></script>
 <script defer src="data/trendy.js?v=20251019"></script>
 <script defer src="data/dataindex.js?v=20251019"></script>
 
-<!-- APP -->
 <script defer src="js/state.js?v=20251017"></script>
 <script defer src="js/tts.js?v=20251017"></script>
 <script defer src="js/app.js?v=20251017"></script>
 
-<!-- Auth wiring -->
 <script>
 document.addEventListener('DOMContentLoaded', ()=>{
   const modal=authModal, loginBtn=document.getElementById('loginBtn'), closeBtn=authClose;
@@ -253,7 +236,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
 });
 </script>
 
-<!-- Picker + Tips -->
 <script>
 (function(){
   const CATS=["Daily","Travel","Trendy Talk","K-Drama"];
@@ -288,7 +270,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
 })();
 </script>
 
-<!-- Nav rewrite -->
 <script>
 (function(){
   const btn={next:nextBtn,prev:prevBtn,daily:dailyBtn,travel:travelBtn,drama:dramaBtn,trendy:trendyBtn};
@@ -311,7 +292,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
 })();
 </script>
 
-<!-- Analytics -->
 <script>
 (function(){
   function buildPath(){
@@ -335,7 +315,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 })();
 </script>
 
-<!-- TTS API 0.6~1.0 -->
+<!-- TTS API 0.6~1.0 with toast -->
 <script>
 window.addEventListener('load',()=>{
   const ENDPOINT="https://asia-northeast3-sori-tts.cloudfunctions.net/tts";
@@ -358,9 +338,20 @@ window.addEventListener('load',()=>{
     e.preventDefault(); e.stopImmediatePropagation();
     const ko=(document.getElementById('korean')?.textContent||'').trim();
     await playKo(ko);
+
     const cntEl=document.getElementById('repCount');
-    let n=parseInt(cntEl.textContent||'0',10); if(n<5){ n++; cntEl.textContent=String(n); }
+    let n=parseInt(cntEl.textContent||'0',10);
+    if(n<5){ n++; cntEl.textContent=String(n); }
     document.querySelectorAll('.rep-dot').forEach((d,i)=> d.classList.toggle('completed', i < n));
+
+    if(n===5){
+      const toast=document.getElementById('congrats');
+      if(toast){
+        toast.textContent="Nice work!";
+        toast.classList.add('show');
+        setTimeout(()=>toast.classList.remove('show'), 1800);
+      }
+    }
   }, true);
 
   if('speechSynthesis' in window){
@@ -369,7 +360,6 @@ window.addEventListener('load',()=>{
 });
 </script>
 
-<!-- 뜻/로마자 적용 디바운스 + 페이드인 -->
 <script>
 (function(){
   const quote = s => `"${String(s||'').replace(/^"+|"+$/g,'').trim()}"`;
@@ -444,8 +434,6 @@ window.addEventListener('load',()=>{
 })();
 </script>
 
-<!-- Congrats toast element -->
 <div id="congrats" aria-live="polite"></div>
-
 </body>
 </html>
