--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <text x="32" y="42" font-family="sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">S</text>
   </svg>'/>
 
+<!-- Additional favicon formats for better browser compatibility -->
+<link rel="icon" type="image/png" sizes="32x32" href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+    <circle cx="16" cy="16" r="15" fill="#7c3aed"/>
+    <text x="16" y="21" font-family="sans-serif" font-size="12" font-weight="bold" fill="white" text-anchor="middle">S</text>
+  </svg>'/>
+<link rel="icon" type="image/png" sizes="16x16" href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+    <circle cx="8" cy="8" r="7" fill="#7c3aed"/>
+    <text x="8" y="11" font-family="sans-serif" font-size="6" font-weight="bold" fill="white" text-anchor="middle">S</text>
+  </svg>'/>
+
 <!-- Apple Touch Icon for home screen -->
 <link rel="apple-touch-icon" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180">
@@ -28,12 +40,12 @@
 <link rel="icon" type="image/png" sizes="192x192" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192">
     <circle cx="96" cy="96" r="90" fill="#7c3aed"/>
-    <text x="96" y="125" font-family="sans-serif" font-size="72" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <text x="96" y="125" font-family="sans-serif" font-size="48" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
   </svg>'/>
 <link rel="icon" type="image/png" sizes="512x512" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
     <circle cx="256" cy="256" r="240" fill="#7c3aed"/>
-    <text x="256" y="340" font-family="sans-serif" font-size="192" font-weight="bold" fill="white" text-anchor="middle">S</text>
+    <text x="256" y="340" font-family="sans-serif" font-size="128" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
   </svg>'/>
 
 <!-- PWA Manifest -->
@@ -48,12 +60,12 @@
     "theme_color": "#7c3aed",
     "icons": [
       {
-        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 192 192%22%3E%3Ccircle cx=%2296%22 cy=%2296%22 r=%2290%22 fill=%22%237c3aed%22/%3E%3Ctext x=%2296%22 y=%22125%22 font-family=%22sans-serif%22 font-size=%2272%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ES%3C/text%3E%3C/svg%3E",
+        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 192 192%22%3E%3Ccircle cx=%2296%22 cy=%2296%22 r=%2290%22 fill=%22%237c3aed%22/%3E%3Ctext x=%2296%22 y=%22125%22 font-family=%22sans-serif%22 font-size=%2248%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E",
         "sizes": "192x192",
         "type": "image/svg+xml"
       },
       {
-        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22%3E%3Ccircle cx=%22256%22 cy=%22256%22 r=%22240%22 fill=%22%237c3aed%22/%3E%3Ctext x=%22256%22 y=%22340%22 font-family=%22sans-serif%22 font-size=%22192%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ES%3C/text%3E%3C/svg%3E",
+        "src": "data:image/svg+xml;utf8,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22%3E%3Ccircle cx=%22256%22 cy=%22256%22 r=%22240%22 fill=%22%237c3aed%22/%3E%3Ctext x=%22256%22 y=%22340%22 font-family=%22sans-serif%22 font-size=%22128%22 font-weight=%22bold%22 fill=%22white%22 text-anchor=%22middle%22%3ESori%3C/text%3E%3C/svg%3E",
         "sizes": "512x512",
         "type": "image/svg+xml"
       }
