--- a/index.html
+++ b/index.html
@@ -10,48 +10,43 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700;800;900&display=swap" rel="stylesheet">
 
-<!-- Force favicon update with cache busting -->
-<link rel="icon" type="image/svg+xml" href='data:image/svg+xml;utf8,
+<link rel="icon" type="image/svg+xml"
+  href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
     <circle cx="32" cy="32" r="30" fill="#7c3aed"/>
     <text x="32" y="42" font-family="sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">S</text>
-  </svg>?v=20250121'/>
-<link rel="shortcut icon" type="image/svg+xml" href='data:image/svg+xml;utf8,
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-    <circle cx="32" cy="32" r="30" fill="#7c3aed"/>
-    <text x="32" y="42" font-family="sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">S</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 
 <!-- Additional favicon formats for better browser compatibility -->
 <link rel="icon" type="image/png" sizes="32x32" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
     <circle cx="16" cy="16" r="15" fill="#7c3aed"/>
     <text x="16" y="21" font-family="sans-serif" font-size="12" font-weight="bold" fill="white" text-anchor="middle">S</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 <link rel="icon" type="image/png" sizes="16x16" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
     <circle cx="8" cy="8" r="7" fill="#7c3aed"/>
     <text x="8" y="11" font-family="sans-serif" font-size="6" font-weight="bold" fill="white" text-anchor="middle">S</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 
 <!-- Apple Touch Icon for home screen -->
 <link rel="apple-touch-icon" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180">
     <circle cx="90" cy="90" r="85" fill="#7c3aed"/>
     <text x="90" y="118" font-family="sans-serif" font-size="68" font-weight="bold" fill="white" text-anchor="middle">S</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 
 <!-- Android and PWA icons -->
 <link rel="icon" type="image/png" sizes="192x192" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192">
     <circle cx="96" cy="96" r="90" fill="#7c3aed"/>
     <text x="96" y="125" font-family="sans-serif" font-size="48" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 <link rel="icon" type="image/png" sizes="512x512" href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
     <circle cx="256" cy="256" r="240" fill="#7c3aed"/>
     <text x="256" y="340" font-family="sans-serif" font-size="128" font-weight="bold" fill="white" text-anchor="middle">Sori</text>
-  </svg>?v=20250121'/>
+  </svg>'/>
 
 <!-- PWA Manifest -->
 <link rel="manifest" href='data:application/json;utf8,
